fix: adjust opacity for hr and selected language button for better visibility

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -197,7 +197,7 @@ hr {
     height: 25px;
     border: none;
     margin-bottom: 5px;
-    opacity: 0.5;
+    opacity: 0.2;
     transition: opacity 0.2s ease-in-out;
 }
 
@@ -206,8 +206,7 @@ hr {
 }
 
 .btnSelectLang.lang-selected {
-    box-shadow: 0px 0px 1px 1px #265b8a;
-    opacity: 1 !important;
+    opacity: 0.55 !important;
 }
 
 .catalonia {
